--- a/FloorLocation/Views/Home/Add.cshtml
+++ b/FloorLocation/Views/Home/Add.cshtml
@@ -1,10 +1,44 @@
-﻿@{
+﻿@model FloorLocation.Models.Location
+@{
     ViewData["Title"] = "Add Location";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 <div class="wrapper">
     <div class="container">
         <a asp-action="Index">Floor Locations</a>
+        <div class="pageTitle">Update Location</div>
+        @using (Html.BeginForm())
+        {
+            @Html.AntiForgeryToken()
+            @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+            @Html.HiddenFor(model => model.LocationName)
+            <table class="edit">
+                <tr>
+                    <th>Location Name</th>
+                    <td>
+                        @Html.EditorFor(model => model.LocationName, new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.ValidationMessageFor(model => model.LocationName, "", new { @class = "text-danger" })
+                    </td>
+                </tr>
+                <tr>
+                    <th>Location ID</th>
+                    <td>
+                        @Html.EditorFor(model => model.LocationId, new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.ValidationMessageFor(model => model.LocationId, "", new { @class = "text-danger" })
+                    </td>
+                </tr>
+                <tr>
+                    <th>Is Clearance</th>
+                    <td>
+                        @Html.DropDownListFor(model => model.IsClearance,
+                    new SelectList(Enum.GetValues(typeof(Clearance))),
+                    "Select Clearance")
+                        @Html.ValidationMessageFor(model => model.IsClearance, "", new { @class = "text-danger" })
+                    </td>
+                </tr>
+            </table>
+            <div class="btnRow"><input type="submit" value="ADD" class="btn" /><div class="btn">@Html.ActionLink("CANCEL", "Index")</div></div>
+        }
     </div>
 </div>
 
