--- a/FloorLocation/Views/Home/Index.cshtml
+++ b/FloorLocation/Views/Home/Index.cshtml
@@ -3,7 +3,6 @@
     ViewData["Title"] = "Locations";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-<!-- https://www.aspsnippets.com/Articles/3786/WebGrid-Step-By-Step-Tutorial-with-example-in-ASPNet-Core-MVC/ -->
 <div class="wrapper">
     <div class="container">
         <a asp-action="Add" class="btn">Add Location</a>
@@ -38,5 +37,10 @@
                 }
             </tbody>
         </table>
+        @Html.ActionLink("1", "Index", "Home", new { PageNumber = 1 }, new { @class = "btn" })
+        @Html.ActionLink("2", "Index", "Home", new { PageNumber = 2 }, new { @class = "btn" })
+        @Html.ActionLink("3", "Index", "Home", new { PageNumber = 3 }, new { @class = "btn" })
+        @Html.ActionLink("4", "Index", "Home", new { PageNumber = 4 }, new { @class = "btn" })
+        @Html.ActionLink("5", "Index", "Home", new { PageNumber = 5 }, new { @class = "btn" })
     </div>
 </div>
