show the page number to prove it updates

--- a/FloorLocation/Views/Home/Index.cshtml
+++ b/FloorLocation/Views/Home/Index.cshtml
@@ -5,6 +5,7 @@
 }
 <div class="wrapper">
     <div class="container">
+        <p>Page Number: @ViewData["PageNumber"]</p>
         <a asp-action="Add" class="btn">Add Location</a>
         <table class="table">
             <thead>
