--- a/FloorLocation/wwwroot/css/site.css
+++ b/FloorLocation/wwwroot/css/site.css
@@ -36,6 +36,21 @@ table.table {
     justify-content: space-between;
 }
 
+.paging {
+    display: flex;
+}
+
+.paging a {
+    display:inline-block;
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px 4px;
+    border: none;
+    text-decoration: none;
+    color: #000000;
+}
+
 .btn {
     border: 1px solid #cccccc;
     border-radius: 2px;
