--- a/FloorLocation/Views/Home/Index.cshtml
+++ b/FloorLocation/Views/Home/Index.cshtml
@@ -6,10 +6,21 @@
     if(@ViewData["PageCount"] is not null) {
         pageCount = (int?)@ViewData["PageCount"];
     }
+    int? recordCount = 0;
+    if (@ViewData["RecordCount"] is not null)
+    {
+        recordCount = (int?)@ViewData["RecordCount"];
+    }
+    int? pageNumber = 0;
+    if (@ViewData["PageNumber"] is not null)
+    {
+        pageNumber = (int?)@ViewData["PageNumber"];
+    }
+    string btnClass = "inactive";
 }
 <div class="wrapper">
     <div class="container">
-        <p>Page Size: 5, Total Pages: @pageCount Total Records: @ViewData["RecordCount"], Page Number: @ViewData["PageNumber"]</p>
+        <p>Page Size: 5, Total Pages: @pageCount Total Records: @recordCount, Page Number: @pageNumber</p>
         <a asp-action="Add" class="btn">Add Location</a>
         <table class="table">
             <thead>
@@ -43,10 +54,38 @@
                 <tr>
                     <td colspan="4">
                         <div class="paging">
-                        @for (var i = 1; i <= pageCount; i++)
-                        {
-                            @Html.ActionLink(i.ToString(), "Index", "Home", new { PageNumber = i })
-                        }
+                            @if (pageNumber == 1) { btnClass = "active"; } else { btnClass = "inactive"; }
+                            @Html.ActionLink("1", "Index", "Home", new { PageNumber = 1 }, new { @class = btnClass })
+                            @if (pageNumber < 5)
+                            {
+                                for (var i = 2; i <= 5; i++)
+                                {
+                                    if (pageNumber != 1 && i == pageNumber) { btnClass = "active"; } else { btnClass = "inactive"; }
+                                    @Html.ActionLink(i.ToString(), "Index", "Home", new { PageNumber = i }, new { @class = btnClass })
+                                }
+                                <div>...</div>
+                            }
+                            else if (pageNumber > (pageCount - 4))
+                            {
+                                <div>...</div>
+                                for (var i = (pageCount - 4); i < pageCount; i++)
+                                {
+                                    if (pageNumber != 1 && i == pageNumber) { btnClass = "active"; } else { btnClass = "inactive"; }
+                                    @Html.ActionLink(i.ToString(), "Index", "Home", new { PageNumber = i }, new { @class = btnClass })
+                                }
+                            }
+                            else
+                            {
+                                <div>...</div>
+                                for (var i = (pageNumber - 1); i < (pageNumber + 2); i++)
+                                {
+                                    if (pageNumber != 1 && i == pageNumber) { btnClass = "active"; } else { btnClass = "inactive"; }
+                                    @Html.ActionLink(i.ToString(), "Index", "Home", new { PageNumber = i }, new { @class = btnClass })
+                                }
+                                <div>...</div>
+                            }
+                            @if (pageNumber == pageCount) { btnClass = "active"; } else { btnClass = "inactive"; }
+                            @Html.ActionLink(pageCount.ToString(), "Index", "Home", new { PageNumber = pageCount }, new { @class = btnClass })
                         </div>
                     </td>
                 </tr>
