--- a/FloorLocation/Views/Home/Add.cshtml
+++ b/FloorLocation/Views/Home/Add.cshtml
@@ -2,6 +2,11 @@
 @{
     ViewData["Title"] = "Add Location";
     Layout = "~/Views/Shared/_Layout.cshtml";
+    int? pageSize = 0;
+    if (@ViewData["PageSize"] is not null)
+    {
+        pageSize = (int?)@ViewData["PageSize"];
+    }
     int? pageNumber = 0;
     if (@ViewData["PageNumber"] is not null)
     {
@@ -41,7 +46,7 @@
                     </td>
                 </tr>
             </table>
-            <div class="btnRow"><input type="submit" value="ADD" class="btn" /><div class="btn">@Html.ActionLink("CANCEL", "Index", new { PageNumber = pageNumber })</div></div>
+            <div class="btnRow"><input type="submit" value="ADD" class="btn" /><div class="btn">@Html.ActionLink("CANCEL", "Index", new { PageSize = pageSize })</div></div>
         }
     </div>
 </div>
