--- a/FloorLocation/Views/Home/Index.cshtml
+++ b/FloorLocation/Views/Home/Index.cshtml
@@ -2,6 +2,11 @@
 @{
     ViewData["Title"] = "Locations";
     Layout = "~/Views/Shared/_Layout.cshtml";
+    int? pageSize = 0;
+    if (@ViewData["PageSize"] is not null)
+    {
+        pageSize = (int?)@ViewData["PageSize"];
+    }
     int? pageCount = 0;
     if(@ViewData["PageCount"] is not null) {
         pageCount = (int?)@ViewData["PageCount"];
@@ -17,12 +22,15 @@
         pageNumber = (int?)@ViewData["PageNumber"];
     }
     string btnClass = "inactive";
-    int? firstSetPage = (pageNumber * 5) - 4;
-    int? lastSetPage = pageNumber * 5;
+    int? firstSetPage = (pageNumber * pageSize) - (pageSize - 1);
+    int? lastSetPage = pageNumber * pageSize;
     if(lastSetPage > recordCount)
     {
         lastSetPage = recordCount;
     }
+    List<SelectListItem> items = new List<SelectListItem>();
+    items.Add(new SelectListItem { Text = "5", Value = "5", Selected = true });
+    items.Add(new SelectListItem { Text = "10", Value = "10" });
 }
 <div class="wrapper">
     <div class="container">
@@ -50,9 +58,9 @@
                             @Html.DisplayTextFor(modelItem => item.IsClearance)
                         </td>
                         <td>
-                            @Html.ActionLink("Update", "Update", new { LocationName = item.LocationName, PageNumber = pageNumber }, new { @class = "btn" })
+                            @Html.ActionLink("Update", "Update", new { LocationName = item.LocationName, PageSize = pageSize, PageNumber = pageNumber }, new { @class = "btn" })
                             |
-                            @Html.ActionLink("Delete", "Delete", new { LocationName = item.LocationName, PageNumber = pageNumber }, new { @class = "btn" })
+                            @Html.ActionLink("Delete", "Delete", new { LocationName = item.LocationName, PageSize = pageSize, PageNumber = pageNumber }, new { @class = "btn" })
                         </td>
                     </tr>
                 }
@@ -61,13 +69,13 @@
                         <div class="pageNavigation">
                             <div class="paging">
                                 @if (pageNumber == 1) { btnClass = "active"; } else { btnClass = "inactive"; }
-                                @Html.ActionLink("1", "Index", "Home", new { PageNumber = 1 }, new { @class = btnClass })
-                                @if (pageNumber < 5)
+                                @Html.ActionLink("1", "Index", "Home", new { PageSize = pageSize, PageNumber = 1 }, new { @class = btnClass })
+                                @if (pageNumber < pageSize)
                                 {
-                                    for (var i = 2; i <= 5; i++)
+                                    for (var i = 2; i <= pageSize; i++)
                                     {
                                         if (pageNumber != 1 && i == pageNumber) { btnClass = "active"; } else { btnClass = "inactive"; }
-                                        @Html.ActionLink(i.ToString(), "Index", "Home", new { PageNumber = i }, new { @class = btnClass })
+                                        @Html.ActionLink(i.ToString(), "Index", "Home", new { PageSize = pageSize, PageNumber = i }, new { @class = btnClass })
                                     }
                                     <div>...</div>
                                 }
@@ -77,7 +85,7 @@
                                     for (var i = (pageCount - 4); i < pageCount; i++)
                                     {
                                         if (pageNumber != 1 && i == pageNumber) { btnClass = "active"; } else { btnClass = "inactive"; }
-                                        @Html.ActionLink(i.ToString(), "Index", "Home", new { PageNumber = i }, new { @class = btnClass })
+                                        @Html.ActionLink(i.ToString(), "Index", "Home", new { PageSize = pageSize, PageNumber = i }, new { @class = btnClass })
                                     }
                                 }
                                 else
@@ -86,12 +94,15 @@
                                     for (var i = (pageNumber - 1); i < (pageNumber + 2); i++)
                                     {
                                         if (pageNumber != 1 && i == pageNumber) { btnClass = "active"; } else { btnClass = "inactive"; }
-                                        @Html.ActionLink(i.ToString(), "Index", "Home", new { PageNumber = i }, new { @class = btnClass })
+                                        @Html.ActionLink(i.ToString(), "Index", "Home", new { PageSize = pageSize, PageNumber = i }, new { @class = btnClass })
                                     }
                                     <div>...</div>
                                 }
                                 @if (pageNumber == pageCount) { btnClass = "active"; } else { btnClass = "inactive"; }
-                                @Html.ActionLink(pageCount.ToString(), "Index", "Home", new { PageNumber = pageCount }, new { @class = btnClass })
+                                @Html.ActionLink(pageCount.ToString(), "Index", "Home", new { PageSize = pageSize, PageNumber = pageCount }, new { @class = btnClass })
+                            </div>
+                            <div>
+                                Page Size: @Html.DropDownList("PageSize", items, new { @id = "PageSize" })
                             </div>
                             <div class="info">
                                 @firstSetPage - @lastSetPage of @recordCount items
@@ -103,3 +114,10 @@
         </table>
     </div>
 </div>
+<script>
+    const pageSize = document.querySelector('#PageSize');
+    pageSize.onchange = function () {
+        const size = pageSize.value;
+        window.location = "/Home/Index?PageSize=" + size + "&PageNumber=1";
+    };
+</script>
