--- a/FloorLocation/Views/Home/Add.cshtml
+++ b/FloorLocation/Views/Home/Add.cshtml
@@ -40,8 +40,7 @@
                     <th>Is Clearance</th>
                     <td>
                         @Html.DropDownListFor(model => model.IsClearance,
-                    new SelectList(Enum.GetValues(typeof(Clearance))),
-                    "Select Clearance")
+                    new SelectList(Enum.GetValues(typeof(Clearance))))
                         @Html.ValidationMessageFor(model => model.IsClearance, "", new { @class = "text-danger" })
                     </td>
                 </tr>
